--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,12 +7,32 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
     <base href="/" />
+    <!-- <meta name="referrer" content="origin"> -->
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
+    <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Login</h1>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="padding-bottom: 20px">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Better Reads</a>
+        </div>
+        <div th:insert="components/book-search :: search-panel"></div>
+      </nav>
+      <h1>Login</h1>
 
-    <div>
-      With GitHub: <a href="/oauth2/authorization/github">click here</a>
+      <div>
+        With GitHub: <a href="/oauth2/authorization/github">click here</a>
+      </div>
     </div>
   </body>
 </html>
