--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="referrer" content="origin"> -->
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -15,10 +16,10 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
     ></script>
-    <title>ibdb - Book Details</title>
+
+    <title>Better Reads</title>
 </head>
 <body>
-
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="padding-bottom: 20px">
         <div class="container-fluid">
@@ -26,26 +27,18 @@
         </div>
         <div th:insert="components/book-search :: search-panel"></div>
     </nav>
-    <section class="content">
-        <div class="card">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img th:src="${coverImage}"
-                         class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title display-1" th:text="${book.name}">Name</h5>
-                        <p class="card-text display-5" th:text="${book.authorNames}">Author name</p>
-                        <p class="card-text" th:text="${book.description}">Book description</p>
-                        <p class="card-text">Published Date: <small class="text-muted" th:text="${book.publishedDate}">2020-01-01</small></p>
 
-                    </div>
+    <section class="content">
+        <div class="card-group">
+            <div class="card" style="flex: 0 0 18%; margin: 30px;" th:each="result: ${searchResults}">
+                <img th:src="${result.cover_i}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${result.title}">Card title</h5>
+                    <a href="#" th:href="@{'/books/' + ${result.key}}" class="btn btn-primary">View book</a>
                 </div>
             </div>
         </div>
     </section>
 </div>
-
 </body>
 </html>
