--- a/src/main/resources/templates/book-not-found.html
+++ b/src/main/resources/templates/book-not-found.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta name="referrer" content="origin"> -->
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Book Not Found</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -16,16 +16,18 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
     ></script>
-    <title>ibdb - Book Details - 404</title>
+
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="padding-bottom: 20px">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Better Reads</a>
-        </div>
-        <div th:insert="components/book-search :: search-panel"></div>
-    </nav>
-    <p>Book not found</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light"  style="padding-bottom: 20px">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">IBDB</a>
 
+    </div>
+</nav>
+<div class="container">
+    <div th:insert="components/book-search :: search-panel"></div>
+    <h1 class="text-center">Book not found</h1>
+</div>
 </body>
 </html>
